--- a/statistic/build.gradle
+++ b/statistic/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	ext {
 		springBootVersion = '2.1.2.RELEASE'
+
 	}
 	repositories {
 		mavenCentral()
@@ -18,6 +19,10 @@ group = 'com.maxpaint.hibernate'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jupiter = '5.3.1'
+testcontainers = '1.10.5'
+
+
 repositories {
 	mavenCentral()
 }
@@ -25,5 +30,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	compile "org.testcontainers:postgresql:$testcontainers"
+	compile "org.testcontainers:testcontainers:$testcontainers"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter"
+	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter"
+}
+
+test {
+	useJUnitPlatform()
 }
